--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "it_service",
+  "name": "Rbt-global-llp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "aos": "^2.3.4",
     "framer-motion": "^12.24.7",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
